src/objects/NeedAssessmentHistory__c.object
<CustomObject>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue_New__c</fullName>
        <label>FieldValue_New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue_Old__c</fullName>
        <label>FieldValue_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment__c</fullName>
        <label>Needs Assessment</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipName>NeedAssessmentHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Member Connect History</label>
    <nameField>
        <label>NeedAssessmentHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Connect History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>